# partial_discharge_compare

./: .gitignore  AGENTS.md  Project_Execution_Flowchart.md  README.md  __init__.py  config.py  config.yaml  debug_discovery.py  experiment_configs.yaml  experiment_runner.py  instruct.md  main.py  ml_flow.md  note.md  pyproject.toml  requirements.txt  run_experiments.py  selfnote.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: README.md  architecture.md
eda/: check_station_counts.py  open_npy.py
feature_extraction/: __init__.py  base_feature.py  dominant_frequency.py  spectral_entropy.py  time_kurtosis.py  time_mean.py  time_rms.py  time_skewness.py  time_std.py  wavelet_features.py
features/: __init__.py  catalog.py  extract_from_clean.py  extractors.py
ml/: __init__.py  config.json  config.yaml  data_loader.py  data_processor.py  feature_expander.py  feature_selector.py  helper.py  main.py  model_runner.py  parameter_tuner.py
ml_flow/: __init__.py  config.json  data_loader.py  data_processor.py  feature_selector.py  helper.py  main.py  model_runner.py  parameter_tuner.py
notebooks/: cleaning_tutorial.ipynb  eda_tutorial.ipynb  feature_catalog_tutorial.ipynb  feature_extraction_tutorial.ipynb  feature_select_tuto.ipynb  new_developer_workflow.py
preprocess/: __init__.py  augmentation.py  cleaning.py  discovery.py  io.py  run_preprocess.py  sklearn_data.py  windowing.py
reports/: __init__.py  report_generator.py
unitest/: __init__.py  open_npy.py  run_all_test.py  test_cleaning.py  test_config.py  test_discovery.py  test_features.py  (+3 more)
(+4 files in other folders)
