[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "partial_discharge_compare"
version = "0.1.0"
description = "Utilities for comparing partial discharge models"
authors = [{name = "Unknown"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "scikit-learn",
    "xgboost",
    "optuna",
    "featurewiz",
]

[tool.setuptools]
packages = ["partial_discharge_compare", "partial_discharge_compare.ml_flow"]
